--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,79 @@
-body {
-  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+/* Global Styles */
+
+/* Color Scheme */
+/* #fefefe */
+/* #91abb7 */
+/* #1c3247 */
+/* #0f5A72 */
+/* #1d3244 */
+
+* {
+  font-family: 'Spectral', serif;
 }
+
+body {
+  box-sizing: border-box;
+  display: flex;
+  margin: 0;
+  padding: 0; 
+  /* background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%); */
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+
+ /* Left Nav */
+
+nav {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  height: 100vh;
+  border: 1px solid #91abb7;
+}
+
+.pending-trips-container {
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+.pending-trips {
+  width: 150px;
+  height: 30vh;
+  border: 1px solid #0f5A72;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+}
+
+
+/* Main */
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100vh;
+  width: 75%;
+  border: 1px solid #1d3244;
+}
+
+.trips-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+}
+
+.trips {
+  width: 220px;
+  height: 35vh;
+  border: 1px solid #0f5A72;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+}
+
