--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -47,7 +47,8 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10px;
+  /* justify-content: center; */
+  margin: 3px;
 }
 
 
@@ -74,6 +75,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10px;
+  margin: 7px;
 }
 
