--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,6 +9,7 @@
 
 * {
   font-family: 'Spectral', serif;
+  color: #fefefe;
 }
 
 body {
@@ -31,9 +32,24 @@ nav {
   display: flex;
   flex-direction: column;
   width: 25%;
-  height: 100vh;
+  height: 125vh;
   border: 1px solid #91abb7;
+  /* background-color: #0f5A72; */
+  background-color: #1d3244;
+  padding-left: 25px;
 }
+
+h1 {
+  font-size: 35px;
+  margin: 10px 0;
+  text-shadow: 3px 10px 3px #1c3247;
+}
+
+.date {
+  margin: 10px 0;
+}
+
+
 
 .pending-trips-container {
   display: grid;
@@ -41,14 +57,20 @@ nav {
 }
 
 .pending-trips {
-  width: 150px;
-  height: 30vh;
+  min-width: 150px;
+  max-width: 150px;
+  min-height: 30%;
   border: 1px solid #0f5A72;
   display: flex;
   flex-direction: column;
+  /* border-radius: 25px; */
   align-items: center;
   /* justify-content: center; */
   margin: 3px;
+  /* background-color: #1d3244; */
+  background-color: #0f5A72;
+  box-shadow: 3px 3px 6px 0px #1c3247;
+  /* color: black; */
 }
 
 
@@ -58,9 +80,34 @@ main {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   width: 75%;
   border: 1px solid #1d3244;
+  /* background-color: #1c3247; */
+  /* background-color: #1d3244; */
+  background-color: #d3d3d3;
+}
+
+.input-box,
+ button {
+  border: 1px solid #0f5A72;
+  background-color: #0f5A72;
+  padding: 15px 50px;
+  border-radius: 30px;
+  box-shadow: 3px 5px 8px 0px #1c3247;
+}
+
+.inputs{
+  color: black;
+}
+
+.swiper {
+  width: 600px;
+  height: 300px;
+}
+
+button {
+  padding: 5px 20px;
 }
 
 .trips-container {
@@ -69,12 +116,16 @@ main {
 }
 
 .trips {
-  width: 220px;
-  height: 35vh;
+  min-width: 220px;
+  min-height: 35%;
   border: 1px solid #0f5A72;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 7px;
+  background-color: #0f5A72;
+  box-shadow: 3px 3px 6px 0px #1c3247;
+  /* background-color: #1d3244; */
+  /* color: black; */
 }
 
