--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,7 @@
 /* #1d3244 */
 
 * {
-  font-family: 'Spectral', serif;
+  font-family: "Spectral", serif;
   color: #fefefe;
 }
 
@@ -16,7 +16,7 @@ body {
   box-sizing: border-box;
   display: flex;
   margin: 0;
-  padding: 0; 
+  padding: 0;
   /* background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%); */
 }
 
@@ -25,8 +25,7 @@ p {
   padding: 0;
 }
 
-
- /* Left Nav */
+/* Left Nav */
 
 nav {
   display: flex;
@@ -42,14 +41,12 @@ nav {
 h1 {
   font-size: 35px;
   margin: 10px 0;
-  text-shadow: 3px 10px 3px #1c3247;
+  text-shadow: 2px 2px 3px #000000;
 }
 
 .date {
   margin: 10px 0;
 }
-
-
 
 .pending-trips-container {
   display: grid;
@@ -60,7 +57,7 @@ h1 {
   min-width: 150px;
   max-width: 150px;
   min-height: 30%;
-  border: 1px solid #0f5A72;
+  border: 1px solid #0f5a72;
   display: flex;
   flex-direction: column;
   /* border-radius: 25px; */
@@ -68,11 +65,10 @@ h1 {
   /* justify-content: center; */
   margin: 3px;
   /* background-color: #1d3244; */
-  background-color: #0f5A72;
-  box-shadow: 3px 3px 6px 0px #1c3247;
+  background-color: #0f5a72;
+  box-shadow: 2px 2px 4px 0px #000000;
   /* color: black; */
 }
-
 
 /* Main */
 main {
@@ -88,22 +84,51 @@ main {
   background-color: #d3d3d3;
 }
 
-.input-box,
- button {
-  border: 1px solid #0f5A72;
-  background-color: #0f5A72;
+.input-bar,
+button {
+  border: 1px solid #0f5a72;
+  background-color: #0f5a72;
   padding: 15px 50px;
   border-radius: 30px;
-  box-shadow: 3px 5px 8px 0px #1c3247;
+  box-shadow: 2px 2px 4px 0px #000000;
+  margin: 15px;
 }
 
-.inputs{
+.inputs {
   color: black;
 }
 
 .swiper {
-  width: 600px;
-  height: 300px;
+  width: 730px;
+  height: 300px; 
+  border-radius: 10px;
+  background-color: #0f5a72;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 20px;
+  background-color: #0f5a72;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+}
+
+.swiper-button-prev,
+.swiper-button-next  {
+  color: white;
+  background-color: #1d3244;
 }
 
 button {
@@ -118,14 +143,13 @@ button {
 .trips {
   min-width: 220px;
   min-height: 35%;
-  border: 1px solid #0f5A72;
+  border: 1px solid #0f5a72;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 7px;
-  background-color: #0f5A72;
-  box-shadow: 3px 3px 6px 0px #1c3247;
+  background-color: #0f5a72;
+  box-shadow: 2px 2px 4px 0px #000000;
   /* background-color: #1d3244; */
   /* color: black; */
 }
-
