--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -31,11 +31,12 @@ nav {
   display: flex;
   flex-direction: column;
   width: 25%;
-  height: 125vh;
+  height: 117vh;
   border: 1px solid #91abb7;
-  /* background-color: #0f5A72; */
-  background-color: #1d3244;
+  background-color: #0f5A72;
+  /* background-color: #1d3244; */
   padding-left: 25px;
+  overflow-y: scroll;
 }
 
 h1 {
@@ -73,15 +74,17 @@ h1 {
 /* Main */
 main {
   display: flex;
+  padding-top: 130px;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 100%;
+  height: 100vh;
   width: 75%;
   border: 1px solid #1d3244;
   /* background-color: #1c3247; */
   /* background-color: #1d3244; */
   background-color: #d3d3d3;
+  overflow-y: scroll;
 }
 
 .input-bar,
@@ -103,16 +106,16 @@ button {
 
 .inputs {
   color: black;
+  margin: 0 15px 0 5px;
 }
 
 .swiper {
   width: 730px;
   height: 300px; 
-  border-radius: 10px;
-  background-color: #0f5a72;
 }
 
 .swiper-slide {
+  border-radius: 10px;
   text-align: center;
   font-size: 20px;
   background-color: #0f5a72;
@@ -157,6 +160,59 @@ button {
   margin: 7px;
   background-color: #0f5a72;
   box-shadow: 2px 2px 4px 0px #000000;
-  /* background-color: #1d3244; */
-  /* color: black; */
 }
+
+.swiper-button-next, .swiper-button-prev {
+  position: absolute;
+  top: 50%;
+  width: calc(var(--swiper-navigation-size)/ 44 * 27);
+  height: var(--swiper-navigation-size);
+  margin-top: calc(0px - (var(--swiper-navigation-size)/ 2));
+  z-index: 10;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--swiper-navigation-color,var(--swiper-theme-color));
+}
+
+:root {
+--swiper-navigation-color: #fff;
+}
+
+/* .swiper-button-next::after, .swiper-button-prev::after {
+  content: "";
+}
+
+.swiper-button-prev {
+  color: red; 
+}
+
+.swiper-button-next {
+  color: #000; 
+} */
+
+
+/* .swiper-button-prev {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%234c71ae'%2F%3E%3C%2Fsvg%3E") !important;
+}
+
+.swiper-button-next {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%234c71ae'%2F%3E%3C%2Fsvg%3E") !important;
+} */
+
+/* :root {
+  --swiper-theme-color: #000;
+} */
+
+ /* .swiper-button-next, .swiper-button-prev {
+  background-color: #0f5a72; /* your background color */
+  /* background-blend-mode: difference; try any value possible until it suits you */
+/* }  */
+
+/* .swiper-button-prev {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' viewBox%3D'0 0 27 44'%3E%3Cpath d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z' fill%3D'%23ffffff'%2F%3E%3C%2Fsvg%3E") !important;
+}
+.swiper-button-next {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' viewBox%3D'0 0 27 44'%3E%3Cpath d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z' fill%3D'%23ffffff'%2F%3E%3C%2Fsvg%3E") !important;
+} */
