--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,9 +15,12 @@
 body {
   box-sizing: border-box;
   display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   padding: 0;
-  /* background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%); */
+  height: 100vh;
+  background-color: #1d3244;
 }
 
 p {
@@ -25,8 +28,30 @@ p {
   padding: 0;
 }
 
-/* Left Nav */
+/* Login */
+.login-container {
+  width: 300px;
+  margin: 15px;
+  padding: 30px;
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  background-color: #d3d3d3;
+}
 
+.login-title,
+input,
+.login-inputs {
+  color: #3d3838;
+}
+
+.login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Left Nav */
 nav {
   display: flex;
   flex-direction: column;
@@ -76,14 +101,15 @@ main {
   overflow-y: scroll;
 }
 
-form {
+.input-field {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .input-bar,
-button {
+.book-trip-button,
+.login-button {
   padding: 15px 50px;
   border-radius: 30px;
   box-shadow: 2px 2px 4px 0px #000000;
